Update SQL Lite DB.ipynb

--- a/SQL Lite DB.ipynb
+++ b/SQL Lite DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,8 @@
     "              sc_type_id INTEGER,\\\n",
     "              sc_type TEXT NOT NULL UNIQUE,\\\n",
     "              doc INTEGER NOT NULL CHECK (doc=0 OR doc=1) DEFAULT 0, \\\n",
-    "              PRIMARY KEY (sc_type_id))'\n",
+    "              PRIMARY KEY (sc_type_id),\\\n",
+    "              UNIQUE (sc_type_id, doc))'\n",
     "          )\n",
     "c.execute('CREATE TABLE IF NOT EXISTS accounts ( \\\n",
     "              account INTEGER, \\\n",
@@ -56,19 +57,45 @@
     "              subcount_id INTEGER, \\\n",
     "              sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id), \\\n",
     "              sc_name TEXT, \\\n",
-    "              document_id INTEGER REFERENCES documents (document_id),\\\n",
+    "              document_id INTEGER REFERENCES documents (document_id), \\\n",
     "              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0, \\\n",
-    "              PRIMARY KEY (subcount_id))'\n",
+    "              doc INTEGERG NOT NULL CHECK (doc=0 OR doc=1) DEFAULT 0, \\\n",
+    "              PRIMARY KEY (subcount_id),\\\n",
+    "              FOREIGN KEY (sc_type_id, doc) REFERENCES sc_types (sc_type_id, doc),\\\n",
+    "              CHECK ((doc=1 AND document_id NOTNULL) OR (doc=0 AND document_id ISNULL)))'\n",
     "          )\n",
     "c.execute('CREATE TABLE IF NOT EXISTS operations ( \\\n",
     "            operation_id INTEGER,\\\n",
     "            value_date TEXT CHECK (date(value_date) IS NOT NULL),\\\n",
-    "            creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT \\'now\\', \\\n",
+    "            creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT CURRENT_TIMESTAMP, \\\n",
     "            document_id INTEGER NOT NULL REFERENCES documents (document_id), \\\n",
     "            operation_type_id INTEGER, \\\n",
     "            registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0, \\\n",
     "            PRIMARY KEY (operation_id))'\n",
     "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS transactions ( \\\n",
+    "            trans_id INTEGER,\\\n",
+    "            operation_id INTEGER NOT NULL REFERENCES operations (operation_id), \\\n",
+    "            db_account INTEGER NOT NULL REFERENCES accounts (account_id), \\\n",
+    "            db_sc_1_id INTEGER REFERENCES subcounts (subcount_id), \\\n",
+    "            db_sc_2_id INTEGER REFERENCES subcounts (subcount_id), \\\n",
+    "            cr_account INTEGER NOT NULL REFERENCES accounts (account_id), \\\n",
+    "            cr_sc_1_id INTEGER REFERENCES subcounts (subcount_id), \\\n",
+    "            cr_sc_2_id INTEGER REFERENCES subcounts (subcount_id), \\\n",
+    "            amount REAL NOT NULL, \\\n",
+    "            value REAL NOT NULL, \\\n",
+    "            PRIMARY KEY (trans_id))'\n",
+    "          )\n",
+    "# c.execute('CREATE TRIGGER IF NOT EXIST subcount-doc \\\n",
+    "#             BEFORE INSERT ON subcount WHEN  \\\n",
+    "#             operation_id INTEGER,\\\n",
+    "#             value_date TEXT CHECK (date(value_date) IS NOT NULL),\\\n",
+    "#             creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT \\'now\\', \\\n",
+    "#             document_id INTEGER NOT NULL REFERENCES documents (document_id), \\\n",
+    "#             operation_type_id INTEGER, \\\n",
+    "#             registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0, \\\n",
+    "#             PRIMARY KEY (operation_id))'\n",
+    "#           )\n",
     "# c.execute('CREATE VIEW IF NOT EXISTS oper_with_doc AS \\\n",
     "#                 SELECT \\\n",
     "#                   operations.operation_id, \\\n",
@@ -105,69 +132,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sc_types\n",
-      "accounts\n",
-      "document_types\n",
-      "documents\n",
-      "subcounts\n",
-      "operations\n"
+     "ename": "OperationalError",
+     "evalue": "no such column: sc_types",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-113-d26a7c7ee979>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#data = c.execute('SELECT group_concat(sc_type_id) FORM (SELECT * FROM sc_types WHERE doc=1)').fetchall()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'SELECT group_concat(sc_types) FILTER (WHERE doc=1) FROM sc_types'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;31m# data = c.execute(\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#     \"SELECT `name`, `sql`\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOperationalError\u001b[0m: no such column: sc_types"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('sc_types_temp',\n",
-       "  'CREATE TABLE sc_types_temp(\\n  sc_type_id INT,\\n  sc_type TEXT,\\n  doc INT\\n)'),\n",
-       " ('accounts_temp',\n",
-       "  'CREATE TABLE accounts_temp(\\n  account INT,\\n  account_name TEXT,\\n  sc_type_id_1 INT,\\n  sc_type_id_2 INT\\n)'),\n",
-       " ('document_types_temp',\n",
-       "  'CREATE TABLE document_types_temp(\\n  document_type_id INT,\\n  document_type TEXT\\n)'),\n",
-       " ('documents_temp',\n",
-       "  'CREATE TABLE documents_temp(\\n  document_id INT,\\n  document_type_id INT,\\n  document_date TEXT,\\n  document_number TEXT,\\n  comment TEXT\\n)'),\n",
-       " ('subcounts_temp',\n",
-       "  'CREATE TABLE subcounts_temp(\\n  subcount_id INT,\\n  sc_type_id INT,\\n  sc_name TEXT,\\n  document_id INT,\\n  archive INT\\n)'),\n",
-       " ('operations_temp',\n",
-       "  'CREATE TABLE operations_temp(\\n  operation_id INT,\\n  value_date TEXT,\\n  creation_date TEXT,\\n  document_id INT,\\n  operation_type_id INT,\\n  registered INT\\n)'),\n",
-       " ('sc_types',\n",
-       "  'CREATE TABLE sc_types (              sc_type_id INTEGER,              sc_type TEXT NOT NULL UNIQUE,              doc INTEGER NOT NULL CHECK (doc=0 OR doc=1) DEFAULT 0,               PRIMARY KEY (sc_type_id))'),\n",
-       " ('accounts',\n",
-       "  'CREATE TABLE accounts (               account INTEGER,               account_name TEXT NOT NULL,               sc_type_id_1 INTEGER REFERENCES sc_types (sc_type_id),               sc_type_id_2 INTEGER REFERENCES sc_types (sc_type_id),               PRIMARY KEY (account)) WITHOUT ROWID'),\n",
-       " ('document_types',\n",
-       "  'CREATE TABLE document_types (               document_type_id INTEGER,               document_type TEXT NOT NULL UNIQUE,               PRIMARY KEY (document_type_id))'),\n",
-       " ('documents',\n",
-       "  'CREATE TABLE documents (               document_id INTEGER,               document_type_id INTEGER NOT NULL REFERENCES document_types (document_type_id),              document_date TEXT CHECK (date(document_date) IS NOT NULL OR NULL),               document_number TEXT,               comment TEXT,               PRIMARY KEY (document_id))'),\n",
-       " ('subcounts',\n",
-       "  'CREATE TABLE subcounts (               subcount_id INTEGER,               sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id),               sc_name TEXT,               document_id INTEGER REFERENCES documents (document_id),              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0,               PRIMARY KEY (subcount_id))'),\n",
-       " ('operations',\n",
-       "  \"CREATE TABLE operations (             operation_id INTEGER,            value_date TEXT CHECK (date(value_date) IS NOT NULL),            creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT 'now',             document_id INTEGER NOT NULL REFERENCES documents (document_id),             operation_type_id INTEGER,             registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0,             PRIMARY KEY (operation_id))\")]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "conn = sqlite3.connect(file)\n",
     "c = conn.cursor()\n",
-    "# c.execute('ALTER TABLE sc_types \\\n",
-    "#             ADD doc INTEGER CHECK (doc is NULL OR doc=1) \\\n",
-    "#           ')\n",
-    "data = c.execute(\n",
-    "    \"SELECT `name`, `sql`\\\n",
-    "  FROM `sqlite_master` \\\n",
-    "  WHERE type='table'\").fetchall()\n",
+    "#data = c.execute('SELECT group_concat(sc_type_id) FORM (SELECT * FROM sc_types WHERE doc=1)').fetchall()\n",
+    "data = c.execute('SELECT group_concat(sc_types) FILTER (WHERE doc=1) FROM sc_types').fetchall()\n",
+    "# data = c.execute(\n",
+    "#     \"SELECT `name`, `sql`\\\n",
+    "#   FROM `sqlite_master` \\\n",
+    "#   WHERE type='table'\").fetchall()\n",
     "#data = pd.DataFrame(data)\n",
-    "for table in data:\n",
-    "    if 'temp' not in table[0]:\n",
-    "        print(table[0])\n",
+    "# for table in data:\n",
+    "#     if 'temp' not in table[0]:\n",
+    "#         print(table[0])\n",
     "#    c.execute(\"DROP TABLE {}\".format(table[0]+'_temp'))\n",
     "conn.close()\n",
     "data"
