--- a/GDC.ipynb
+++ b/GDC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,269 @@
     "import numpy as np\n",
     "import re\n",
     "import os\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "\n",
+    "pd.set_option('max_colwidth', 160)\n",
+    "pd.set_option('mode.chained_assignment', None)\n",
+    "\n",
+    "base = 'C:/Users/gdoku/YandexDisk/Компания/07 Учётные регистры и первичные документы/accounting.db'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>number</th>\n",
+       "      <th>value</th>\n",
+       "      <th>description</th>\n",
+       "      <th>bik</th>\n",
+       "      <th>account</th>\n",
+       "      <th>reciver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-07-10</td>\n",
+       "      <td>42212</td>\n",
+       "      <td>40455.22</td>\n",
+       "      <td>Передача остатков на баланс филиала Центральный</td>\n",
+       "      <td>44525411</td>\n",
+       "      <td>30306810400812301006</td>\n",
+       "      <td>Внутрибанковские требования по хозяйственным /внутрибанковским операциям. Миграция филиал 7806 г. Санкт-Петербург</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-07-13</td>\n",
+       "      <td>374</td>\n",
+       "      <td>2160.44</td>\n",
+       "      <td>ПОГАШЕНИЕ ПРОЦЕНТОВ ЗА ИЮНЬ 2020Г ПО ДОГОВОРУ ЗАЙМА №45792-59708-41325-28 ОТ 04.07.2019Г НДС НЕ ОБЛАГАЕТСЯ</td>\n",
+       "      <td>42202747</td>\n",
+       "      <td>40702810623570000076</td>\n",
+       "      <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ ТОРГОВЫЙ ДОМ \"БЕРЁЗАКЕРАМИКА-НИЖНИЙ НОВГОРОД\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-07-13</td>\n",
+       "      <td>14713</td>\n",
+       "      <td>3475.00</td>\n",
+       "      <td>ОПЛАТА ПО ДОГОВОРУ ЗАЙМА ОТ 26.09.2018 ОТ ИМЕНИ ЮСУПОВА НАВРУЗБЕКА ДАВРОНБЕКОВИЧА БЕЗ НДС</td>\n",
+       "      <td>44525214</td>\n",
+       "      <td>40817810700484324174</td>\n",
+       "      <td>КПП0ДОКУЧАЕВ ГЕОРГИЙ АНДРЕЕВИЧ//196626,78 Г,,,ШУШАРЫ 421,НОВГОРОДСКИЙ 519,6А,,533//</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-07-14</td>\n",
+       "      <td>73</td>\n",
+       "      <td>-400.66</td>\n",
+       "      <td>Проценты по договору займа № 33/06 от 25.06.2020. Без НДС</td>\n",
+       "      <td>44525411</td>\n",
+       "      <td>40802810025360000142</td>\n",
+       "      <td>ИП Докучаев Георгий Андреевич</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2020-07-14</td>\n",
+       "      <td>74</td>\n",
+       "      <td>-51639.34</td>\n",
+       "      <td>Проценты по договору займа № 14 от 30.01.2019. Без НДС</td>\n",
+       "      <td>44525411</td>\n",
+       "      <td>40802810025360000142</td>\n",
+       "      <td>ИП Докучаев Георгий Андреевич</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>130</td>\n",
+       "      <td>2020-10-01</td>\n",
+       "      <td>97</td>\n",
+       "      <td>-14762.21</td>\n",
+       "      <td>Проценты по договору займа № 13 от 22.12.2018. Удержан налог 2205 рублей. НДС не облагается</td>\n",
+       "      <td>44525745</td>\n",
+       "      <td>40817810220004009688</td>\n",
+       "      <td>Докучаев Иван Андреевич</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>131</td>\n",
+       "      <td>2020-10-01</td>\n",
+       "      <td>1205</td>\n",
+       "      <td>674.97</td>\n",
+       "      <td>ОПЛ. ПРОЦЕНТОВ ПО ДОГОВОРУ 48176-61898-41325-27 ОТ 17.12.2019 СУММА 674-97 БЕЗ НАЛОГА (НДС)</td>\n",
+       "      <td>40407627</td>\n",
+       "      <td>40702810031000098770</td>\n",
+       "      <td>ООО ЛТК</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>132</td>\n",
+       "      <td>2020-10-01</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>9695.03</td>\n",
+       "      <td>ОПЛ. ОСНОВНОГО ДОЛГА ПО ДОГОВОРУ 48176-61898-41325-27 ОТ 17.12.2019 СУММА 9695-03 БЕЗ НАЛОГА (НДС)</td>\n",
+       "      <td>40407627</td>\n",
+       "      <td>40702810031000098770</td>\n",
+       "      <td>ООО ЛТК</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>133</td>\n",
+       "      <td>2020-10-02</td>\n",
+       "      <td>450119</td>\n",
+       "      <td>20000.00</td>\n",
+       "      <td>Перевод по договору займа, процентный, возврат. НДС не облагается</td>\n",
+       "      <td>44525974</td>\n",
+       "      <td>40817810500000238690</td>\n",
+       "      <td>СТРЕЛКОВ АЛЕКСАНДР СЕРГЕЕВИЧ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>134</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>417</td>\n",
+       "      <td>15000.00</td>\n",
+       "      <td>ОЧЕРЕДНОЙ ПЛАТЕЖ ПО ДОПОЛНИТЕЛЬНОМУ СОГЛАШЕНИЮ №3 ОТ 01.05.2020 ДОГОВОРУ ЗАЙМА 181227-01 ОТ 27.12.2018 ЗА ООО НТК БИЗНЕС 7707843223/771501001, НДС НЕ ОБЛАГ..</td>\n",
+       "      <td>44525225</td>\n",
+       "      <td>40702810338000189962</td>\n",
+       "      <td>ООО \"НТК ПРОМ\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>135 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date  number     value  \\\n",
+       "0   2020-07-10   42212  40455.22   \n",
+       "1   2020-07-13     374   2160.44   \n",
+       "2   2020-07-13   14713   3475.00   \n",
+       "3   2020-07-14      73   -400.66   \n",
+       "4   2020-07-14      74 -51639.34   \n",
+       "..         ...     ...       ...   \n",
+       "130 2020-10-01      97 -14762.21   \n",
+       "131 2020-10-01    1205    674.97   \n",
+       "132 2020-10-01    1204   9695.03   \n",
+       "133 2020-10-02  450119  20000.00   \n",
+       "134 2020-10-05     417  15000.00   \n",
+       "\n",
+       "                                                                                                                                                       description  \\\n",
+       "0                                                                                                                  Передача остатков на баланс филиала Центральный   \n",
+       "1                                                       ПОГАШЕНИЕ ПРОЦЕНТОВ ЗА ИЮНЬ 2020Г ПО ДОГОВОРУ ЗАЙМА №45792-59708-41325-28 ОТ 04.07.2019Г НДС НЕ ОБЛАГАЕТСЯ   \n",
+       "2                                                                        ОПЛАТА ПО ДОГОВОРУ ЗАЙМА ОТ 26.09.2018 ОТ ИМЕНИ ЮСУПОВА НАВРУЗБЕКА ДАВРОНБЕКОВИЧА БЕЗ НДС   \n",
+       "3                                                                                                        Проценты по договору займа № 33/06 от 25.06.2020. Без НДС   \n",
+       "4                                                                                                           Проценты по договору займа № 14 от 30.01.2019. Без НДС   \n",
+       "..                                                                                                                                                             ...   \n",
+       "130                                                                    Проценты по договору займа № 13 от 22.12.2018. Удержан налог 2205 рублей. НДС не облагается   \n",
+       "131                                                                    ОПЛ. ПРОЦЕНТОВ ПО ДОГОВОРУ 48176-61898-41325-27 ОТ 17.12.2019 СУММА 674-97 БЕЗ НАЛОГА (НДС)   \n",
+       "132                                                             ОПЛ. ОСНОВНОГО ДОЛГА ПО ДОГОВОРУ 48176-61898-41325-27 ОТ 17.12.2019 СУММА 9695-03 БЕЗ НАЛОГА (НДС)   \n",
+       "133                                                                                              Перевод по договору займа, процентный, возврат. НДС не облагается   \n",
+       "134  ОЧЕРЕДНОЙ ПЛАТЕЖ ПО ДОПОЛНИТЕЛЬНОМУ СОГЛАШЕНИЮ №3 ОТ 01.05.2020 ДОГОВОРУ ЗАЙМА 181227-01 ОТ 27.12.2018 ЗА ООО НТК БИЗНЕС 7707843223/771501001, НДС НЕ ОБЛАГ..   \n",
+       "\n",
+       "          bik               account  \\\n",
+       "0    44525411  30306810400812301006   \n",
+       "1    42202747  40702810623570000076   \n",
+       "2    44525214  40817810700484324174   \n",
+       "3    44525411  40802810025360000142   \n",
+       "4    44525411  40802810025360000142   \n",
+       "..        ...                   ...   \n",
+       "130  44525745  40817810220004009688   \n",
+       "131  40407627  40702810031000098770   \n",
+       "132  40407627  40702810031000098770   \n",
+       "133  44525974  40817810500000238690   \n",
+       "134  44525225  40702810338000189962   \n",
+       "\n",
+       "                                                                                                               reciver  \n",
+       "0    Внутрибанковские требования по хозяйственным /внутрибанковским операциям. Миграция филиал 7806 г. Санкт-Петербург  \n",
+       "1                               ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ ТОРГОВЫЙ ДОМ \"БЕРЁЗАКЕРАМИКА-НИЖНИЙ НОВГОРОД\"  \n",
+       "2                                  КПП0ДОКУЧАЕВ ГЕОРГИЙ АНДРЕЕВИЧ//196626,78 Г,,,ШУШАРЫ 421,НОВГОРОДСКИЙ 519,6А,,533//  \n",
+       "3                                                                                        ИП Докучаев Георгий Андреевич  \n",
+       "4                                                                                        ИП Докучаев Георгий Андреевич  \n",
+       "..                                                                                                                 ...  \n",
+       "130                                                                                            Докучаев Иван Андреевич  \n",
+       "131                                                                                                            ООО ЛТК  \n",
+       "132                                                                                                            ООО ЛТК  \n",
+       "133                                                                                       СТРЕЛКОВ АЛЕКСАНДР СЕРГЕЕВИЧ  \n",
+       "134                                                                                                     ООО \"НТК ПРОМ\"  \n",
+       "\n",
+       "[135 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Обработка выписки по банковскому счёту\n",
+    "'''\n",
+    "\n",
+    "# Выбираем последний файл\n",
+    "path = r'C:/Users/gdoku/YandexDisk/Компания/06 Договоры (прочие)/Договор банковского счёта Банк ВТБ (ПАО)/Выписки'\n",
+    "files = os.listdir(os.path.join(path))\n",
+    "files = [os.path.join(path, file) for file in files]\n",
+    "file = max(files, key=os.path.getctime)\n",
+    "\n",
+    "# Считываем и обрабатываем их\n",
+    "statment = pd.read_csv(file, sep=';', encoding='cp1251',\n",
+    "                   header=0).iloc[2:, [1,2,4,6,7,8,9]].reset_index(drop=True)\n",
+    "statment.columns = ['date', 'number', 'value', 'description', 'bik', 'account', 'reciver']\n",
+    "statment.date = pd.to_datetime(statment.date, format='%d.%m.%Y')\n",
+    "statment.value = statment.value.apply(lambda x: float(x))\n",
+    "statment.bik = statment.bik.apply(lambda x: str(int(x)))\n",
+    "statment.sort_values(by='date')\n",
+    "\n",
+    "# Загружаем данные в базу"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
