Update SQL Lite DB.ipynb

--- a/SQL Lite DB.ipynb
+++ b/SQL Lite DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,9 @@
     "    \"SELECT `name`, `sql` FROM `sqlite_master` WHERE type='table'\").fetchall()\n",
     "\n",
     "# Удаляем старые таблицы\n",
-    "for table in tables:\n",
-    "    if 'temp' not in table[0]:\n",
-    "        c.execute(\"DROP TABLE {}\".format(table[0]))\n",
+    "# for table in tables:\n",
+    "#     if 'temp' not in table[0]:\n",
+    "#         c.execute(\"DROP TABLE {}\".format(table[0]))\n",
     "\n",
     "# Создаём таблицы\n",
     "c.execute('CREATE TABLE IF NOT EXISTS sc_types (\\\n",
@@ -101,6 +101,19 @@
     "            reciver TEXT NOT NULL, \\\n",
     "            PRIMARY KEY (payment_id))'\n",
     "          )\n",
+    "c.execute('CREATE VIEW IF NOT EXISTS payments_list AS\\\n",
+    "            SELECT  documents.document_id, \\\n",
+    "                    documents.document_date,\\\n",
+    "                    documents.document_number,\\\n",
+    "                    payments.value,\\\n",
+    "                    payments.description,\\\n",
+    "                    payments.bik,\\\n",
+    "                    payments.account,\\\n",
+    "                    payments.reciver\\\n",
+    "            FROM (documents LEFT JOIN payments ON documents.document_id = payments.payment_id)\\\n",
+    "                    INNER JOIN document_types ON documents.document_type_id = document_types.document_type_id\\\n",
+    "            WHERE document_types.payment=1\\\n",
+    "          ')\n",
     "\n",
     "conn.commit()\n",
     "conn.close()"
