Update SQL Lite DB.ipynb

--- a/SQL Lite DB.ipynb
+++ b/SQL Lite DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,17 @@
     "              FOREIGN KEY (sc_type_id, doc) REFERENCES sc_types (sc_type_id, doc),\\\n",
     "              CHECK ((doc=1 AND document_id NOTNULL) OR (doc=0 AND document_id ISNULL)))'\n",
     "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS operations_types ( \\\n",
+    "            operation_type_id INTEGER,\\\n",
+    "            operation_type TEXT NOT NULL UNIQUE, \\\n",
+    "            PRIMARY KEY (operation_type_id))'\n",
+    "          )\n",
     "c.execute('CREATE TABLE IF NOT EXISTS operations ( \\\n",
     "            operation_id INTEGER,\\\n",
     "            value_date TEXT CHECK (date(value_date) IS NOT NULL),\\\n",
     "            creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT CURRENT_TIMESTAMP, \\\n",
     "            document_id INTEGER NOT NULL REFERENCES documents (document_id), \\\n",
-    "            operation_type_id INTEGER, \\\n",
+    "            operation_type_id INTEGER NOT NULL REFERENCES operations_types (operation_type_id), \\\n",
     "            registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0, \\\n",
     "            PRIMARY KEY (operation_id))'\n",
     "          )\n",
@@ -114,6 +119,68 @@
     "                    INNER JOIN document_types ON documents.document_type_id = document_types.document_type_id\\\n",
     "            WHERE document_types.payment=1\\\n",
     "          ')\n",
+    "c.execute('\\\n",
+    "    CREATE VIEW IF NOT EXISTS subcount_list AS\\\n",
+    "    SELECT \\\n",
+    "        subcounts.subcount_id, \\\n",
+    "        subcounts.sc_type_id, \\\n",
+    "        sc_types.sc_type, \\\n",
+    "        coalesce(subcounts.sc_name , document_types.document_type) \\\n",
+    "        || coalesce(\\' № \\'|| documents.document_number, \\'\\') \\\n",
+    "        || coalesce(\\' от \\'  || documents.document_date, \\'\\') \\\n",
+    "        || coalesce(\\'; \\' || documents.comment, \\'\\') AS subcount, \\\n",
+    "        subcounts.doc \\\n",
+    "    FROM \\\n",
+    "        subcounts INNER JOIN sc_types ON subcounts.sc_type_id = sc_types.sc_type_id LEFT JOIN \\\n",
+    "        documents ON subcounts.document_id = documents.document_id LEFT JOIN \\\n",
+    "        document_types ON documents.document_type_id = document_types.document_type_id \\\n",
+    "        ')\n",
+    "c.execute('\\\n",
+    "CREATE VIEW IF NOT EXISTS transaction_log AS \\\n",
+    "SELECT \\\n",
+    "\ttransactions.trans_id, \\\n",
+    "\toperations.registered, \\\n",
+    "\toperations.value_date, \\\n",
+    "\tdocument_types.document_type \\\n",
+    "        || coalesce(\\' № \\'|| documents.document_number, \\'\\') \\\n",
+    "        || coalesce(\\' от \\'  || documents.document_date, \\'\\') \\\n",
+    "        || coalesce(\\'; \\' || documents.comment, \\'\\') AS document, \\\n",
+    "\toperations_types.operation_type, \\\n",
+    "\ttransactions.db_account AS account, \\\n",
+    "\tcoalesce(subcount_list.subcount, accounts.account_name) AS subcount, \\\n",
+    "\ttransactions.value AS db, \\\n",
+    "\tNull AS cr \\\n",
+    "FROM  \\\n",
+    "\ttransactions INNER JOIN \\\n",
+    "\toperations ON transactions.operation_id = operations.operation_id LEFT JOIN \\\n",
+    "\toperations_types ON operations.operation_type_id = operations_types.operation_type_id LEFT JOIN \\\n",
+    "\tsubcount_list ON transactions.db_sc_1_id = subcount_list.subcount_id LEFT JOIN \\\n",
+    "\tdocuments ON operations.document_id = documents.document_id LEFT JOIN \\\n",
+    "\tdocument_types ON documents.document_type_id = document_types.document_type_id INNER JOIN \\\n",
+    "\taccounts ON transactions.db_account = accounts.account \\\n",
+    "UNION \\\n",
+    "SELECT \\\n",
+    "\ttransactions.trans_id, \\\n",
+    "\toperations.registered, \\\n",
+    "\toperations.value_date, \\\n",
+    "\tdocument_types.document_type \\\n",
+    "\t\t|| coalesce(\\' № \\'|| documents.document_number, \\'\\') \\\n",
+    "\t\t|| coalesce(\\' от \\'  || documents.document_date, \\'\\') \\\n",
+    "\t\t|| coalesce(\\'; \\' || documents.comment, \\'\\') AS document, \\\n",
+    "\toperations_types.operation_type, \\\n",
+    "\ttransactions.cr_account AS account, \\\n",
+    "\tcoalesce(subcount_list.subcount, accounts.account_name) AS subcount, \\\n",
+    "\tNull AS db, \\\n",
+    "\ttransactions.value AS cr \\\n",
+    "FROM  \\\n",
+    "\ttransactions INNER JOIN \\\n",
+    "\toperations ON transactions.operation_id = operations.operation_id LEFT JOIN \\\n",
+    "\toperations_types ON operations.operation_type_id = operations_types.operation_type_id LEFT JOIN \\\n",
+    "\tsubcount_list ON transactions.cr_sc_1_id = subcount_list.subcount_id LEFT JOIN \\\n",
+    "\tdocuments ON operations.document_id = documents.document_id LEFT JOIN \\\n",
+    "\tdocument_types ON documents.document_type_id = document_types.document_type_id INNER JOIN \\\n",
+    "\taccounts ON transactions.cr_account = accounts.account \\\n",
+    "        ')\n",
     "\n",
     "conn.commit()\n",
     "conn.close()"
